# hydro

./: README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml
docs/: index.md  installation.md  license.md  usage.md
hydro/: cli.py  files.py  md5.py
tests/: test_cli.py  test_md5.py
